# pico-test

./: .gitignore  CMakeLists.txt  README.md  auto_set_url.cmake  example_auto_set_url.cmake
as5600/: CMakeLists.txt
as5600_sensor/: as5600_sensor.c
bluetooth_comm/: CMakeLists.txt  bluetooth_comm.c
code/: CMakeLists.txt
code/pico_w/: CMakeLists.txt
code/pico_w/bt/: CMakeLists.txt
mechanics/: base.stl  knob.stl  middle.stl  stand.stl
mechanics/stl/as5600_sensor/: AS5600_tester_knob.stl
src/: CMakeLists.txt
src/as5600_sensor/: CMakeLists.txt
src/bluetooth_comm/: CMakeLists.txt
src/pico_w/: CMakeLists.txt
twitch/: desktop.html
youtube/: main.html
